# panopticum

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ws/core/: Cargo.toml  package.json  tauri.conf.json
ws/core/capabilities/: default.json
ws/core/icons/: icon.icns
ws/core/src/: consts.rs  lib.rs  main.rs
ws/core/src/models/: mod.rs
ws/core/src/modules/: mod.rs
ws/core/src/modules/cache/: services.rs
ws/core/src/modules/content/: commands.rs  mod.rs  services.rs
ws/core/src/modules/ffmpeg/: services.rs
ws/core/src/modules/tauri_helpers/: services.rs
ws/core/src/services/: import.rs  mod.rs  search.rs
ws/core/src/utils/: cmd.rs  fs.rs  mod.rs  schemas.rs  std_helpers.rs
ws/panopticum/: package.json  vite.config.ts
ws/panopticum/src-tauri/: Cargo.toml  tauri.conf.json
ws/panopticum/src-tauri/src/: main.rs
ws/panopticum/src/app/styles/: index.scss
ws/panopticum/src/pages/: index.ts
ws/schemas/: Cargo.toml  package.json
ws/schemas/src/: content_provider_manifest.rs  gen.ts  index.ts  lib.rs
ws/schemas/src/libs/: common.rs  common.ts  content_node.rs  content_node.ts  content_provider_manifest.rs  index.ts  mod.rs
ws/ui/: components.json  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.utils.ts
ws/ui/src/app/: debug.ts  index.ts  index.vue  router.ts  typed-router.d.ts  vite-env.d.ts
ws/ui/src/app/layouts/: Desktop.vue  Fullscreen.vue
ws/ui/src/app/styles/: defaults.css  global.css  index.css
ws/ui/src/entities/common/: Video.vue  VideoCard.vue  index.ts
ws/ui/src/entities/content/: ContentListCard.vue  ContentListRow.vue  VideoCard.vue  index.ts  renderers.tsx
ws/ui/src/entities/user/: UserAvatar.vue
ws/ui/src/features/player/: MenuButtonSettingsPlayer.vue  index.ts  keybindings.ts
ws/ui/src/features/ui/: index.ts  keybindings.ts
ws/ui/src/features/user/: MenuButtonUser.vue  index.ts
ws/ui/src/modules/: index.ts  keyboard.ts  player.ts
ws/ui/src/modules/content/: index.ts
ws/ui/src/modules/interaction/: index.ts
ws/ui/src/modules/player/: index.ts
ws/ui/src/modules/ui/: index.ts
ws/ui/src/pages/: [...all].vue  home.vue  index.vue  typed-router.d.ts
ws/ui/src/pages/components/: PageProviderLocal.vue
ws/ui/src/pages/p/: [id].vue
ws/ui/src/pages/provider/: [key].vue
ws/ui/src/pages/routes/: [...all].vue  home.vue  index.vue
ws/ui/src/shared/: utils.ts
ws/ui/src/shared/composables/: index.ts  useIncrementable.ts  useQueryParam.ts
ws/ui/src/shared/content/: contentProviders.ts
ws/ui/src/shared/modules/: content.ts  index.ts  interaction.ts  keyboard.ts  player.ts  ui.ts
ws/ui/src/shared/repositories/: media.ts
ws/ui/src/shared/utils/: datetime.ts  dom.ts  shadcn.ts
ws/ui/src/widgets/common/: AppSidebar.vue  WindowBar.vue
(+203 files in other folders)
