[package]
name = "panopticum"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panopticum_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[target.x86_64-pc-windows-msvc]
rustflags = [
  "-C",
  "link-arg=/lld"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
panopticum_schemas = { path = "../schemas" }
walkdir = "2"
chrono = "0.4.39"
log = "0.4.22"
tauri = { version = "2", features = [ "protocol-asset" ] }
tauri-plugin-shell = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-fs = "2"
rust_search = "2.1.0"
blake3 = "1.5.5"
tauri-plugin-devtools = "2.0.0"
ffmpeg-sidecar = "2.0.5"
tokio = "1.43.0"
thiserror = "2.0.11"
