[package]
name = "panopticum"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panopticum_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.
# rustflags = [ "-Zthreads=8" ] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.x86_64-pc-windows-msvc]
rustflags = [
  "-C",
  "link-arg=/lld"
]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
panopticum_schemas = { path = "../schemas" }
walkdir = "2"
chrono = "0.4.41"
log = "0.4.27"
tauri = { version = "2.6.2", features = [ "protocol-asset" ] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
tauri-plugin-fs = "2.4.0"
rust_search = "2.1.0"
blake3 = "1.5.5"
tauri-plugin-devtools = "2.0.0"
ffmpeg-sidecar = "2.0.5"
tokio = "1.46.1"
thiserror = "2.0.12"
